stopped overflow-x scroll, laid out the rest of location show

--- a/client/index.less
+++ b/client/index.less
@@ -7,6 +7,7 @@ body{
 }
 .container-fluid {
   background-color: @white;
+  overflow-x: hidden;
 }
 #menu.btn, #menu.btn:hover, #menu.btn:focus {
   background-color: transparent;
