--- a/client/views/location/location.less
+++ b/client/views/location/location.less
@@ -44,18 +44,33 @@
       margin-top: -100px;
     }
     #description {
-      padding: 60px 20px;
+      padding: 60px 40px;
+    }
+  }
+  .events {
+    h2 {
+      color: @lite-red;
+      margin: 40px 5px 0;
+      font-weight: @lite-wt;
+    }
+    ul {
+      list-style: none;
+      margin: 0;
+      padding: 10px;
+
+      li {
+        font-size: 18px;
+      }
     }
   }
 
   #slides_control > div{
     height: 200px;
+    width: 90%;
+    margin: 0 auto;
     img{
       margin:auto;
       width: 400px;
-    }
-    #slides_control {
-      margin: 0 auto;
     }
     .glyphicon{}
     .reflection {
@@ -76,16 +91,15 @@
     }
 
     a.carousel-control.left {
-      margin-left: -115px;
+      margin-left: -100px;
     }
 
     a.carousel-control.right {
-      margin-right: -115px;
+      margin-right: -100px;
     }
 
     a.carousel-control.left, a.carousel-control.right {
       background-image: none;
-      //left: 1090px
     }
     .reflection-badge {
       width: 50px;
